# akash-research-platform

./: .env.example  .gitignore  CLAUDE.md  CLIENT_GUIDE.md  DEPLOY.md  README.md  create_strategy_doc.py  pyproject.toml  render.yaml  requirements.txt  run.py
api/: ai_jobs.py  jobs.py  main.py  schemas.py
docs/: CURSOR_ONBOARDING.md  NEXT_STEPS.md  Strategy_Discussion_Guide.docx  client_briefing.html
engine/: config.py  logging_setup.py
engine/core/: event_loop.py  portfolio.py  types.py
engine/data/: cache.py  fmp_client.py  loader.py  resampler.py  universe.py
engine/db/: repo.py  schema.py
engine/live/: __init__.py  analyst_tracker.py  analyze.py  bakeoff.py  compare.py  earnings_dynamics.py  file_store.py  macro_context.py  memory.py  morning_state.py  pipeline.py  pipeline_morning.py  pipeline_weekly.py  portfolio.py  profiles.py  quant_source.py  scheduler.py  schemas.py  settings.py  state.py  telegram.py  watchlist.py
engine/metrics/: compute.py  returns.py  risk.py  trade_stats.py
engine/portfolio/: hybrid.py
engine/strategy/: exits.py  indicators.py  momentum_strategy.py  signal.py  sizer.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  (+1 more)
scripts/: batch_analyze_watchlist.py  capture_screenshots.py  reformat_telegram_messages.py  refresh_data.py  run_backtest_cli.py  smoke_fmp_stable.py
tests/: conftest.py
ui/: api_client.py  charts.py  main.py  theme.py
watchlist/: _template.md
(+130 files in other folders)
