[project]
name = "akash-research-platform"
version = "0.1.0"
description = "Trend-Following Momentum Strategy Backtesting Platform"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "nicegui>=2.0.0",
    "plotly>=5.20.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "click>=8.1.0",
    # Phase 2 — AI pipeline
    "google-genai>=0.8.0",
    "anthropic>=0.40.0",
    "langgraph>=0.2.50",
    # Phase 4 — Telegram + scheduler
    "apscheduler>=3.10.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "api*", "ui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: tests that take >5s",
    "live: tests that hit live FMP API",
]

[tool.ruff]
line-length = 110
target-version = "py311"
